[tool.poetry]
name = "pdf-chat"
version = "0.1.0"
description = ""
authors = ["jie <yanjya2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
altair = "^5.3.0"
pydub = "^0.25.1"
pygame = "^2.5.2"
pynput = "^1.7.6"
py2app = "^0.28.7"
pyautogui = "^0.9.54"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
